# quark

./: .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
quark-core/: Cargo.toml  build.rs
quark-core/src/: lib.rs
quark-core/src/proto/: slave.proto
quark-master/: Cargo.toml
quark-master/src/: lib.rs  main.rs
quark-master/src/fs/: errors.rs  inode.rs  mod.rs  path.rs
quark-master/tests/: fs.rs
quark-slave/: Cargo.toml
quark-slave/src/: hello.rs  lib.rs  main.rs  slave.rs
quark-slave/tests/: upload_file.rs
rustydfs-core/: Cargo.toml
rustydfs-core/src/proto/: hello.proto  slave.proto
rustydfs-slave/: Cargo.toml
rustydfs-slave/src/: hello.rs  main.rs  slave.rs
rustydfs-slave/tests/: upload_file.rs
