[package]
name = "quark-slave"
version = "0.1.0"
edition = "2024"

[dependencies]
quark-core = { version = "*", path = "../quark-core" }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2" }
prost = "0.14"
tonic-prost = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.47", features = ["derive", "env"] }
opendal = {version = "0.54.0", features = ["services-fs"] }
tokio-stream = "0.1.17"
sha2 = "0.10.9"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v7"] }


[build-dependencies]
tonic-prost-build = "*"

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.22.0"
