[package]
name = "quark-slave"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
opendal = { version = "0.54.0", features = ["services-fs"] }
prost = "0.14"
quark-core = { path = "../quark-core", version = "*" }
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.22.0"

[build-dependencies]
tonic-prost-build = "*"

