[package]
name = "rustydfs-slave"
version = "0.1.0"
edition = "2024"

[dependencies]
rustydfs-core = { version = "*", path = "../rustydfs-core" }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2", features = ["router"] }
prost = "0.14"
tonic-prost = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.47", features = ["derive", "env"] }
rand = "*"
opendal = "0.54.0"


[build-dependencies]
tonic-prost-build = "*"
